--- a/css/style.css
+++ b/css/style.css
@@ -621,7 +621,8 @@ fieldset[disabled] .btn-white.focus {
     width: 100%;
     height: 360px;
     position: relative;
-    overflow: hidden;/* comment this line to see what happens behind the scenes */
+    overflow: hidden;
+    /* comment this line to see what happens behind the scenes */
     margin-bottom: 30px;
     -webkit-transition-duration: 0.3s;
     transition-duration: 0.3s;
@@ -1848,4 +1849,35 @@ section.page-404 p {
     background-repeat: no-repeat;
     background-position: left;
     margin: auto;
+}
+
+/* css extra spice */
+
+.throb {
+    animation-name: throb;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-timing-function: ease-in-out;
+    /* or: ease, ease-in, ease-in-out, linear, cubic-bezier(x1, y1, x2, y2) */
+    animation-fill-mode: forwards;
+    /* or: backwards, both, none */
+    animation-delay: 0s;
+    /* or: Xms */
+}
+
+@keyframes throb {
+    0% {
+        transform: scale(1);
+    }
+    20% {
+        transform: scale(1.1);
+        color: #dd3b37;
+    }
+    70% {
+        color: #F75A56;
+    }
+    100% {
+        transform: scale(1);
+    }
 }
