--- a/css/style.css
+++ b/css/style.css
@@ -1890,3 +1890,9 @@ section.page-404 p {
     box-shadow: 0 1px 8px 0 rgba(43, 49, 58, 0.05), 1px 12px 25px 0 rgba(43, 49, 58, 0.1);
     transition: all .5s ease-in-out;
 }
+.img-fit {
+    object-fit: cover;
+    width:100%;
+    height:48vh;
+    object-position: center 40%;
+}
