--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ h3 {
     font-family: "San Francisco", sans-serif;
     font-weight: 700;
     line-height: 40px;
-    color: #333;
+    color: #F75A56;
     font-size: 32px;
 }
 
@@ -956,6 +956,7 @@ section.about h3 {
     color: #fff;
 }
 
+
 section.about p {
     font-family: "San Francisco", sans-serif;
     font-weight: 500;
@@ -1404,6 +1405,10 @@ section.loogmoji-collection img {
     background-color: transparent;
     width: 100%;
     height: 100%;
+}
+
+section.loogmoji-collection h3{
+    color:#333;
 }
 
 .b-lazy {
