--- a/css/style.css
+++ b/css/style.css
@@ -1461,7 +1461,8 @@ fieldset[disabled] .form-control {
     background-color: #e5e5e5;
 }
 
-section.portfolio-content p {
+section.portfolio-content p,
+section.portfolio-content li {
     font-family: "San Francisco", sans-serif;
     font-weight: 500;
     line-height: 30px;
@@ -2059,28 +2060,79 @@ section.page-404 p {
     }
 }
 
-.scroll-text{
-    font-weight:500;
-    position:absolute;
-    bottom:35px;
-    left:35px;
-    background-color: rgba(0,0,0,0.4);
-    padding:0.2em 0.6em;
-    color:#fff;
-    border:2px solid #fff;
+.scroll-text {
+    font-weight: 500;
+    position: absolute;
+    bottom: 35px;
+    left: 35px;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 0.2em 0.6em;
+    color: #fff;
+    border: 2px solid #fff;
     border-radius: 1em;
-    -webkit-animation: mymove 2s infinite; /* Safari 4.0 - 8.0 */
+    -webkit-animation: mymove 2s infinite;
+    /* Safari 4.0 - 8.0 */
     animation: mymove 2s infinite;
 }
 
 @-webkit-keyframes mymove {
-    0% {left: 0px;}
-    50% {left: 15px;}
-    100% {left: 0px;}
+    0% {
+        left: 0px;
+    }
+
+    50% {
+        left: 15px;
+    }
+
+    100% {
+        left: 0px;
+    }
 }
 
 @keyframes mymove {
-    0% {left: 0px;}
-    50% {left: 15px;}
-    100% {left: 0px;}
+    0% {
+        left: 0px;
+    }
+
+    50% {
+        left: 15px;
+    }
+
+    100% {
+        left: 0px;
+    }
+}
+
+.logo-loogmoji {
+    width: 20%;
+    margin: 2em auto;
+}
+
+.sticky-right {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 69px;
+}
+
+.scroll.album > img {
+    margin-right: 20px;
+}
+
+
+@media (max-width:767px) {
+    .logo-loogmoji {
+        width: 50%;
+        margin: 2em auto;
+    }
+    .sticky-right {
+        position: relative;
+        top:0;
+        
+    }
+}
+
+ul.product-details li{
+    font-size:12px;
+    margin:10px auto;
+    line-height:1;
 }
